--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	</nav>
 </section>
 
-	<img class="QR" src="img/QR.png">
+	<img class="QR" src="img/QR.png" alt="QO code">
 
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
